Kanal sistemi ve yeni ayarlamalar.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "boxen": "^8.0.1",
     "chalk": "^2.4.1",
     "discord-player": "^7.1.0",
+    "discord-player-applemusic": "^1.0.2",
     "discord-player-soundcloud": "^1.0.7",
     "discord-player-spotify": "^1.1.2",
     "discord-player-youtubei": "^1.4.5",
