--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 TOKEN = 
 LOGS = 
 DEVELOPERID =
-BOT_BANNER_URL =
+BOT_BANNER_URL = 
 MONGO =
+SPOTIFY_ID =
+SPOTIFY_SECRET =
+YOUTUBE_CREDENTIALS =
