--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.2.0",
+    "lyrics-finder": "^21.7.0",
     "mongoose": "^8.13.2"
   }
 }
