--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
+## Bot tokeniniz.
 TOKEN = 
+## Botun hata loglarını göndereceği kanal.
 LOGS = 
+## ID'niz (İsteğe bağlı)
 DEVELOPERID =
+## Müzik sistemi için görsel URL'si.
 BOT_BANNER_URL = 
+## Mongo bağlantınız.
 MONGO =
+## Spotify bilgileriniz.
 SPOTIFY_ID =
 SPOTIFY_SECRET =
