--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "boxen": "^8.0.1",
     "chalk": "^2.4.1",
     "discord-player": "^7.1.0",
+    "discord-player-soundcloud": "^1.0.7",
     "discord-player-spotify": "^1.1.2",
     "discord-player-youtubei": "^1.4.5",
     "discord.js": "^14.14.1",
