--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tsumi",
+  "name": "muiren",
   "version": "1.0.0",
   "description": "Muiren, heraklessi(HERA) tarafından geliştirilen açık kaynak kodlu Discord bot projesidir.",
   "main": "index.js",
